--- a/MAE_demo.ipynb
+++ b/MAE_demo.ipynb
@@ -29,6 +29,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "14983314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install numpy tensorflow torch torchvision tensorflow-datasets timm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2231321e",
    "metadata": {},
