--- a/MAE_demo.ipynb
+++ b/MAE_demo.ipynb
@@ -34,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Recommended python version 3.9+\n",
     "%pip install numpy tensorflow torch torchvision tensorflow-datasets timm"
    ]
   },
